[package]
name = "treegrep"
version = "0.1.0"
authors = ["Jarred Allen"]
edition = "2018"
description = "A command for searching through text-based tree data"
readme = "README.md"
repository = "https://github.com/JarredAllen/treegrep"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
clap = { version = "2.33", features = ["wrap_help"] }
